# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.907 2009/06/25 01:00:17 martin Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

2.4.0 beta4 (2009/06/??)
 - (2009/06/24) Fixed bug# 3826 - In sent auto responses, WYSIWYG is not working.
 - (2009/06/24) Fixed bug# 3796 - Admin notification edit screen is not coming
    proper in WYSIWYG editor.
 - (2009/06/22) Added PasswordMaxLoginFailed as password preferences to define
    max login till user get gets disabled (invalid-temporarily). Feature
    provided by Torsten Thau.
 - (2009/06/22) Fixed bug# 3775 - Translation error in Kernel/Language/de.pm.
 - (2009/06/22) Fixed bug# 3879 - Typing mistakes in the notification texts
    (scripts/database/otrs-initial_insert.xml).
 - (2009/06/22) Fixed bug# 3907 - Sum rows/columns in stats only adds integers.
 - (2009/06/16) Fixed bug# 3881 - Dashboard - Error message when
    http://otrs.org/rss/ is not reachable.
 - (2009/06/13) Fixed bug# 3791 - Safari v3+4 cannot work with WYSIWYG Editor.
 - (2009/06/10) Fixed bug# 3882 - Dashboard does not set LastScreenOverview.
 - (2009/06/10) Added own web user agent, Kernel::System::WebUserAgent. Removed
    http/ftp access from Kernel::System::Package, moved to new core module.
 - (2009/06/10) Moved default menu type form "Classic" to "Modern".

2.4.0 beta3 (2009/06/08)
 - (2009/06/08) Fixed bug# 3852 - installer.pl throws Got no EncodeObject.
 - (2009/06/08) Fixed bug# 3842 - DBUpdate-to-2.4.pl - Error when updating from
    beta1 to beta 2.
 - (2009/05/28) Added new management dashboard feature.
 - (2009/05/28) Added new event based notication management feature (notification
    can get easy managed via the admin interface).
 - (2009/05/28) Fixed bug# 3868 - the replacement of %s in $Text{} content