@@ -2,7 +2,7 @@
 # AgentDashboardCalendarOverview.dtl - provides HTML for global dashboard
 # Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
 # --
-# $Id: AgentDashboardCalendarOverview.dtl,v 1.2 2009/06/05 15:37:04 martin Exp $
+# $Id: AgentDashboardCalendarOverview.dtl,v 1.3 2009/06/25 23:30:40 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -17,7 +17,7 @@
     <td>
       <a href="$Env{"Baselink"}$Data{"Link"}" onmouseover="window.status='$JSText{"Zoom"}'; return true;" onmouseout="window.status='';" title="$QData{"Title"}">$Data{"ObjectNumber"}</a> $QData{"Title","50"}
       <br/>
-      <i class="small">($Text{"$QData{"Text"}"} $Text{"in"} $QData{"In"})</i>
+      <i class="small" title="$TimeShort{"$QData{"TimeStamp"}"}">($Text{"$QData{"Text"}"} $Text{"in"} $QData{"In"})</i>
     </td>
   </tr>
   <dtl if ($Env{"Color"} eq "searchactive") { $Env{"Color"} = ""; }>
